--- a/src/main/resources/com/example/crime_management_system_gui/view_officer.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/view_officer.fxml
@@ -10,17 +10,17 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="viewOfficer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.viewOfficers">
-    <Button focusTraversable="false" layoutX="750.0" layoutY="689.0" mnemonicParsing="false" onAction="#viewUserData" opacity="0.0" prefHeight="54.0" prefWidth="211.0" text="show">
+    <Button focusTraversable="false" layoutX="702.0" layoutY="249.0" mnemonicParsing="false" onAction="#viewUserData" opacity="0.0" prefHeight="54.0" prefWidth="211.0" text="show">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Label fx:id="username" alignment="CENTER" layoutX="313.0" layoutY="256.0" prefHeight="64.0" prefWidth="371.0">
+    <Label fx:id="username" alignment="CENTER" layoutX="313.0" layoutY="316.0" prefHeight="54.0" prefWidth="371.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-    <TextField fx:id="id" alignment="CENTER" focusTraversable="false" layoutX="571.0" layoutY="182.0" prefHeight="64.0" prefWidth="398.0" promptText="ID">
+    <TextField fx:id="id" alignment="CENTER" focusTraversable="false" layoutX="626.0" layoutY="181.0" prefHeight="54.0" prefWidth="371.0">
         <font>
             <Font size="24.0" />
         </font>
@@ -28,22 +28,22 @@
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <Button focusTraversable="false" layoutX="1149.0" layoutY="626.0" mnemonicParsing="false" onAction="#rateUser" opacity="0.0" prefHeight="54.0" prefWidth="211.0" text="rate">
+    <Button focusTraversable="false" layoutX="1158.0" layoutY="689.0" mnemonicParsing="false" onAction="#rateUser" opacity="0.0" prefHeight="54.0" prefWidth="211.0" text="rate">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Label fx:id="salary" alignment="CENTER" layoutX="1056.0" layoutY="256.0" prefHeight="64.0" prefWidth="371.0">
+    <Label fx:id="salary" alignment="CENTER" layoutX="1056.0" layoutY="323.0" prefHeight="54.0" prefWidth="371.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-    <Label fx:id="rank" alignment="CENTER" layoutX="1056.0" layoutY="329.0" prefHeight="64.0" prefWidth="371.0">
+    <Label fx:id="rank" alignment="CENTER" layoutX="1056.0" layoutY="404.0" prefHeight="54.0" prefWidth="371.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-    <ComboBox fx:id="ranking" focusTraversable="false" layoutX="311.0" layoutY="621.0" prefHeight="64.0" prefWidth="364.0" promptText="New Rank (optional)">
+    <ComboBox fx:id="ranking" focusTraversable="false" layoutX="319.0" layoutY="689.0" prefHeight="54.0" prefWidth="371.0" promptText="New Rank (optional)">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
@@ -58,10 +58,10 @@
             <Font size="24.0" />
         </font>
     </Label>
-    <Label fx:id="department" alignment="CENTER" layoutX="313.0" layoutY="329.0" prefHeight="64.0" prefWidth="371.0">
+    <Label fx:id="department" alignment="CENTER" layoutX="313.0" layoutY="409.0" prefHeight="54.0" prefWidth="371.0">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
-   <ListView fx:id="cases" layoutX="309.0" layoutY="410.0" prefHeight="183.0" prefWidth="1120.0" />
+   <ListView fx:id="cases" layoutX="319.0" layoutY="489.0" prefHeight="183.0" prefWidth="1120.0" />
 </AnchorPane>
